updating the class of box

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </head>
     <body>
         <button class="magic" id="btn">Magic</button>
-        <div id="box" class="big box"></div>
+        <div id="boxes" class="big box"></div>
     </body>
 </html>
