javascript link in html

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <body>
         <button class="magic" id="btn">Magic</button>
         <div id="boxes" class="big box"></div>
+
+        <!-- javascript -->
+        <script src="script.js"></script>
     </body>
 </html>
